sass/blocks/bestseller.scss
.bestseller{
  @extend %fl-column;
  align-items: center;
  justify-content: space-between;
  padding-top: 27px;
  width: 275px;
  float: left;
  border: 1px solid #f4f4f4;
  font-family: "Open Sans";
  &__title{
    padding: 0 40px;
    margin-bottom: 15px;
    color: #1d1d1d;
    font-size: 14px;
    font-weight: 700;
    line-height: 20px;
    text-align: center;
  }
  &__rate{
    margin-bottom: 15px;
  }
  &__info{
    display: flex;
    justify-content: space-around;
    margin-bottom: 15px;
  }
  &__count{
    position: relative;
    display: block;
    padding-right: 25px;
    color: #1d1d1d;
    font-size: 11px;
    font-weight: 400;
    line-height: 18px;
    &::before{
      position: absolute;
      left: -30px;
      /* >> Symbol you want to use: */
      content: "\f00c";
      /* >> Name of the FA free font (mandatory), e.g.:
                 - 'Font Awesome 5 Free' for Regular and Solid symbols;
                 - 'Font Awesome 5 Brand' for Brands symbols. */
      font-family: 'Font Awesome 5 Free';
      /* >> Weight of the font (mandatory):
                 - 400 for Regular and Brands symbols;
                 - 900 for Solid symbols;
                 - 300 for Light symbols. */
      font-weight: 900;
      font-size: 15px;
      color: #00b02a;

      /* >> Optional styling: */
      display: inline-block;
    /* ... */
    }
  }
  &__code{
    margin-bottom: 15px;
    color: #807f7f;
    font-size: 11px;
    font-weight: 400;
    line-height: 18px;
  }
  &__discount{
    @extend %fl-column;
  }
  &__prices{
    display: flex;
    margin-bottom: 15px;
    justify-content: space-around;
    text-transform: uppercase;
  }
  &__prev-price{
    padding-right: 15px;
    color: #cbcbcb;
    font-size: 14px;
    font-weight: 700;
    line-height: 18px;
    text-decoration: line-through;
  }
  &__current-price{
    color: #1d1d1d;
    font-size: 18px;
    font-weight: 700;
    line-height: 18px;
  }
  &__saving{
    display: flex;
    justify-content: space-around;
    margin-bottom: 15px;
  }
  &__saving-name{
    color: #1d1d1d;
    font-size: 11px;
    font-weight: 400;
    line-height: 18px;
  }
  &__saving-value{
    border: solid #00b02a 1px;
    color: #00b02a;
    font-size: 11px;
    font-weight: 400;
    line-height: 18px;
  }
  &__order{
    display: none;
  }
  &__order-add{
    display: flex;
    padding-right: 15px;
  }
  &__order-min,
  &__order-plus{
    padding: 0 7px;
    box-sizing: border-box;
    border: 1px solid #acacac;
    opacity: 0.5;
    color: #050505;
    font-family: "Open Sans";
    font-size: 14px;
    font-weight: 400;
    line-height: 25px;
  }
  &__order-value{
    padding: 0 5px;
    color: #050505;
    font-family: "Open Sans";
    font-size: 14px;
    font-weight: 400;
    line-height: 31px;
  }
  &__card-link{
    padding: 5px 10px;
    background-color: #fb0040;
    color: #fefcfc;
    font-family: "Open Sans";
    font-size: 14px;
    font-weight: 700;
    line-height: 24px;
  }
}
@media (min-width: $desctop-width) {
  .bestseller{
    float: left;
    width: 270px;
    &__image{
      height: 138px;
    }
    &__count::before{
      left: -15px;
    }
  }
}
.bestseller:hover .bestseller__order{
  display: flex;
}
.bestseller:hover .bestseller__title{
  color: #fb0040;
}
.bestseller:hover {
  box-shadow: 0 8px 34px 1px rgba(0, 0, 0, 0.18);
  border: 1px solid #ededed;
}

